[package]
name = "freetds"
version = "0.4.0"
edition = "2021"
description = "freetds wrapper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
freetds-sys = { path = "../freetds-sys" }
chrono = "0.4.23"
rust_decimal = "1.27.0"
log = "0.4.17"
once_cell = "1.17.0"

[build-dependencies]
cc = "1.0.73"

